# hmmibd-rs

./: .gitignore  Cargo.toml  README.md  hmmIBD.c  rabiner89_math.md
c/: README.md  hmmIBD.c
examples/: hmmibd2.rs
misc/: rabiner89_math.md
pf7_data/: dom_gt_config.toml
sim_data/: frq_chr1.txt  frq_chr2.txt  genome.toml
src/: args.rs  bcf.rs  data.rs  genome.rs  genome2.rs  gmap.rs  hmm.rs  lib.rs  matrix.rs  model.rs  samples.rs  sites.rs
testdata/pf7_data/: Readme.md  pf7_chr1_20samples_maf0.01.bcf
testdata/sim_data/: frq_chr3.txt  genome.toml
tests/: cmp_c_vs_rust.sh
