[package]
name = "hmmibd-rs"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive", "wrap_help"] }
csv = "1.2.2"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
smallvec = "1.13.1"
toml = "0.7.5"

[dev-dependencies]
